--- a/src/routes/page.scss
+++ b/src/routes/page.scss
@@ -1,3 +1,26 @@
+@font-face {
+	font-family: SamsungOne;
+	src: url("https://pool-adsomenoise.adhese.com/projects/simid/samsung/fonts/SamsungOne/SamsungOne-600.ttf");
+	src: url("https://pool-adsomenoise.adhese.com/projects/simid/samsung/fonts/SamsungOne/SamsungOne-500.ttf");
+	src: url("https://pool-adsomenoise.adhese.com/projects/simid/samsung/fonts/SamsungOne/SamsungOne-450C.ttf");
+	src: url("https://pool-adsomenoise.adhese.com/projects/simid/samsung/fonts/SamsungOne/SamsungOne-400.ttf");
+}
+
+@font-face {
+	font-family: SamsungSharpSans;
+	src: url("https://pool-adsomenoise.adhese.com/projects/simid/samsung/fonts/SamsungSharpSans/SamsungSharpSans-Bold.otf");
+}
+
+* {
+	font-family: SamsungSharpSans;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	//text-rendering: optimizeSpeed;
+	text-rendering: optimizeLegibility;
+	margin: 0;
+}
+
+
 .main {
 	width: 100%;
 
@@ -10,6 +33,7 @@
 	#contentWrapper {
 		position: relative;
 		width: 95%;
+
 		#animationWrapper {
 			position: absolute;
 			z-index: 3;
@@ -18,21 +42,110 @@
 			// background-color: rgba($color: #004400, $alpha: 0.7);
 			pointer-events: none;
 
-			#testBlock {
-				display: inline-block;
-				width: 40px;
-				height: 30px;
-				background-color: red;
+
+			.logo,
+			.model,
+			.cta,
+			.cta_full {
+				position: absolute;
+				z-index: 50;
+				text-align: center;
 			}
 
-			.testText {
+			.logo {
+				opacity: 0;
+				left: 2.1%;
+				top: 3.5%;
+
+				img {
+					height: 2vw;
+				}
+			}
+
+			.model {
+				opacity: 0;
+				right: 1.7%;
+				top: 3.3%;
+				font-size: 2.75vw;
+				-webkit-font-smoothing: antialiased;
+				-moz-osx-font-smoothing: grayscale;
+				background-color: transparent;
 				pointer-events: auto;
 				display: inline-block;
-				font-size: 23px;
-				color: #fff;
+			}
 
-				// padding-top: 50px;
-				margin-top: 50px;
+			.promo_bol,
+			.promo_bol2 {
+				opacity: 0;
+				position: absolute;
+				z-index: 110;
+				background-color: #0077c8;
+				width: 12.2vw;
+				height: 12.2vw;
+				border-radius: 10vw;
+				right: 2.3%;
+				bottom: 8.8%;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				// align-items: center;
+				padding: 1vw;
+				text-align: center;
+
+				.small {
+					font-family: SamsungOne;
+					font-weight: 450C;
+					color: white;
+					font-size: 1.5vw;
+					letter-spacing: 0.2;
+					-webkit-font-smoothing: antialiased;
+					-moz-osx-font-smoothing: grayscale;
+					margin: 0 !important;
+				}
+
+				.big {
+					display: inline-block;
+					color: white;
+					font-size: 3.5vw;
+					height: 3.5vw;
+					width: 10.7vw;
+					max-width: 11.5vw;
+					// margin-left: 0.26vw;
+					// margin-right: 0.26vw;
+					margin: 0 !important;
+					margin-top: 3.2vh;
+					white-space: nowrap;
+					-webkit-font-smoothing: antialiased;
+					-moz-osx-font-smoothing: grayscale;
+				}
+
+				.small_top {
+					margin-top: 5%;
+					margin-bottom: -7%;
+				}
+			}
+
+
+			.testText {
+				position: absolute;
+				transform: translate(-50%, -50%);
+				top: 50%;
+				left: 50%;
+				pointer-events: auto;
+				display: flex;
+				text-align: center;
+				font-size: 4.1vw;
+				font-family: SamsungSharpSans;
+				// text-shadow: 0px 3px 50px rgba(255,255,255,0.9);
+				text-shadow: 0 0 1.5vw rgb(206 206 206 / 60%),
+					0 0 0.5vw rgb(206 206 206 / 75%);
+				overflow-wrap: break-word;
+				width: 55vw;
+				// max-width: 65vw;
+				flex-wrap: wrap;
+				word-break: break-all;
+				-webkit-font-smoothing: antialiased;
+				-moz-osx-font-smoothing: grayscale;
 				background-color: transparent;
 
 				&.playing {
