--- a/src/routes/page.scss
+++ b/src/routes/page.scss
@@ -38,7 +38,8 @@
 			position: absolute;
 			z-index: 3;
 			width: 100%;
-			height: 100%;
+			// height: 100%;
+			height: 85%;
 			// background-color: rgba($color: #004400, $alpha: 0.7);
 			pointer-events: none;
 
@@ -82,6 +83,8 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
+				border: 1px solid red;
+
 			}
 
 			.frame1 {
@@ -129,11 +132,11 @@
 					position: absolute;
 					z-index: 110;
 					background-color: #0077c8;
-					width: 12.2vw;
-					height: 12.2vw;
+					width: 10.2vw;
+					height: 10.2vw;
 					border-radius: 10vw;
 					right: 2.3%;
-					bottom: 8.8%;
+					bottom: 5.8%;
 					display: flex;
 					flex-direction: column;
 					justify-content: center;
@@ -153,19 +156,24 @@
 					}
 
 					.big {
-						display: inline-block;
-						color: white;
-						font-size: 3.5vw;
-						height: 3.5vw;
-						width: 10.7vw;
-						max-width: 11.5vw;
-						// margin-left: 0.26vw;
-						// margin-right: 0.26vw;
 						margin: 0 !important;
-						margin-top: 3.2vh;
-						white-space: nowrap;
-						-webkit-font-smoothing: antialiased;
-						-moz-osx-font-smoothing: grayscale;
+						margin-top: 3.5vh;
+						display: inline-block;
+
+						input {
+
+							color: white;
+							font-size: 3vw;
+							height: 3.5vw;
+							width: 10.7vw;
+							max-width: 11.5vw;
+							// margin-left: 0.26vw;
+							// margin-right: 0.26vw;
+
+							white-space: nowrap;
+							-webkit-font-smoothing: antialiased;
+							-moz-osx-font-smoothing: grayscale;
+						}
 					}
 
 					.small_top {
@@ -189,9 +197,9 @@
 					text-shadow: 0 0 1.5vw rgb(206 206 206 / 60%),
 						0 0 0.5vw rgb(206 206 206 / 75%);
 					overflow-wrap: break-word;
-					width: 55vw;
-					// max-width: 65vw;
-					flex-wrap: wrap;
+					width: 70%;
+					max-width: 70%;
+					height: auto;
 					word-break: break-all;
 					-webkit-font-smoothing: antialiased;
 					-moz-osx-font-smoothing: grayscale;
@@ -205,7 +213,7 @@
 
 			.frame2 {
 				z-index: 25;
-				border: 1px solid red;
+				overflow: hidden;
 
 				.left,
 				.right {
@@ -219,7 +227,7 @@
 				.left {
 					overflow: hidden;
 					transform: translate(-100%, 0);
-					opacity: 0;
+
 					img {
 
 						transform: scale(1) !important;
@@ -236,7 +244,7 @@
 					justify-content: center;
 					align-items: center;
 					transform: translate(100%, 0);
-					opacity: 0;
+
 					.visual {
 						display: flex;
 						flex-direction: column;
@@ -245,28 +253,37 @@
 						width: 90%;
 
 						.product {
-							font-family: SamsungSharpSans;
-							text-align: center;
-							font-size: 4.2vw;
-							margin-top: 4%;
-							-webkit-font-smoothing: antialiased;
-							-moz-osx-font-smoothing: grayscale;
-							text-rendering: optimizeLegibility;
+							input {
+								font-family: SamsungSharpSans;
+								text-align: left;
+								width: 100%;
+								font-size: 4.2vw;
+								margin-top: 4%;
+								-webkit-font-smoothing: antialiased;
+								-moz-osx-font-smoothing: grayscale;
+								text-rendering: optimizeLegibility;
+
+								&.playing {
+									border: 0;
+								}
+							}
+
 						}
 
 						.image_container {
 							width: 100%;
 							// height: 100%;
-							height: 56vh;
+							height: 50%;
 							display: flex;
 							align-items: center;
 							justify-content: center;
 
 							.image {
 								position: relative;
-								height: 43vh;
+								// height: 43vh;
+								height: 100%;
 								width: 33%;
-								margin-right: 7vw;
+								// margin-right: 7vw;
 								display: flex;
 								justify-content: center;
 								align-items: center;
@@ -300,7 +317,7 @@
 							flex-direction: column;
 							justify-content: flex-end;
 
-							.info {
+							input {
 								margin: 0;
 								margin-bottom: 3%;
 								// margin-top: 3.1vw;
@@ -312,6 +329,10 @@
 								overflow-wrap: break-word;
 								-webkit-font-smoothing: antialiased;
 								-moz-osx-font-smoothing: grayscale;
+
+								&.playing {
+									border: 0 !important;
+								}
 							}
 
 							.bottom {
@@ -319,11 +340,31 @@
 								flex-direction: row;
 								justify-content: space-between;
 								align-items: flex-end;
+
 								.cta_button {
 									opacity: 0;
 									min-width: 30%;
 									max-width: 60%;
 									padding: 2% 1.5%;
+								}
+
+								.cta_span_ {
+									background-color: transparent;
+									color: white;
+									display: flex;
+									font-size: 1.1vw;
+									font-weight: bold;
+									line-height: 1.1vw;
+									margin: 0;
+									margin-left: 01vw;
+									text-align: center;
+									vertical-align: middle;
+									-webkit-font-smoothing: antialiased;
+									-moz-osx-font-smoothing: grayscale;
+
+									&.playing {
+										border: 0 !important;
+									}
 								}
 
 								.samsung {
@@ -342,4 +383,8 @@
 		max-width: 100%;
 		width: 100%;
 	}
+}
+
+.video-js.vjs-playing .vjs-tech {
+	pointer-events: none;
 }
