--- a/src/routes/page.scss
+++ b/src/routes/page.scss
@@ -88,7 +88,6 @@
 			}
 
 			.frame1 {
-				// display: none;
 				z-index: 20;
 
 				.logo,
@@ -258,6 +257,7 @@
 								-webkit-font-smoothing: antialiased;
 								-moz-osx-font-smoothing: grayscale;
 								text-rendering: optimizeLegibility;
+								pointer-events: auto;
 
 								&.playing {
 									border: 0;
@@ -313,7 +313,7 @@
 							flex-direction: column;
 							justify-content: flex-end;
 
-							input {
+							.info {
 								margin: 0;
 								margin-bottom: 3%;
 								// margin-top: 3.1vw;
@@ -325,11 +325,13 @@
 								overflow-wrap: break-word;
 								-webkit-font-smoothing: antialiased;
 								-moz-osx-font-smoothing: grayscale;
+								pointer-events: auto;
 							}
 
-																														.playing {
-																															border: 0 !important;
-																														}
+							.playing {
+								border: 0 !important;
+							}
+
 							.bottom {
 								display: flex;
 								flex-direction: row;
@@ -356,6 +358,7 @@
 									vertical-align: middle;
 									-webkit-font-smoothing: antialiased;
 									-moz-osx-font-smoothing: grayscale;
+									pointer-events: auto;
 
 									&.playing {
 										border: 0 !important;
