--- a/src/routes/page.scss
+++ b/src/routes/page.scss
@@ -1,14 +1,14 @@
 @font-face {
 	font-family: SamsungOne;
-	src: url("https://pool-adsomenoise.adhese.com/projects/simid/samsung/fonts/SamsungOne/SamsungOne-600.ttf");
-	src: url("https://pool-adsomenoise.adhese.com/projects/simid/samsung/fonts/SamsungOne/SamsungOne-500.ttf");
-	src: url("https://pool-adsomenoise.adhese.com/projects/simid/samsung/fonts/SamsungOne/SamsungOne-450C.ttf");
-	src: url("https://pool-adsomenoise.adhese.com/projects/simid/samsung/fonts/SamsungOne/SamsungOne-400.ttf");
+	src: url('https://pool-adsomenoise.adhese.com/projects/simid/samsung/fonts/SamsungOne/SamsungOne-600.ttf');
+	src: url('https://pool-adsomenoise.adhese.com/projects/simid/samsung/fonts/SamsungOne/SamsungOne-500.ttf');
+	src: url('https://pool-adsomenoise.adhese.com/projects/simid/samsung/fonts/SamsungOne/SamsungOne-450C.ttf');
+	src: url('https://pool-adsomenoise.adhese.com/projects/simid/samsung/fonts/SamsungOne/SamsungOne-400.ttf');
 }
 
 @font-face {
 	font-family: SamsungSharpSans;
-	src: url("https://pool-adsomenoise.adhese.com/projects/simid/samsung/fonts/SamsungSharpSans/SamsungSharpSans-Bold.otf");
+	src: url('https://pool-adsomenoise.adhese.com/projects/simid/samsung/fonts/SamsungSharpSans/SamsungSharpSans-Bold.otf');
 }
 
 * {
@@ -20,6 +20,9 @@
 	margin: 0;
 }
 
+.hidden {
+	display: none !important; // de uitzonderlijke keer dat ik toch een keer !important ga moeten gebruiken..
+}
 
 .main {
 	width: 100%;
@@ -84,7 +87,6 @@
 				justify-content: center;
 				align-items: center;
 				border: 1px solid red;
-
 			}
 
 			.frame1 {
@@ -177,7 +179,6 @@
 					}
 				}
 
-
 				.testText {
 					position: absolute;
 					transform: translate(-50%, -50%);
@@ -189,8 +190,7 @@
 					font-size: 4.1vw;
 					font-family: SamsungSharpSans;
 					// text-shadow: 0px 3px 50px rgba(255,255,255,0.9);
-					text-shadow: 0 0 1.5vw rgb(206 206 206 / 60%),
-						0 0 0.5vw rgb(206 206 206 / 75%);
+					text-shadow: 0 0 1.5vw rgb(206 206 206 / 60%), 0 0 0.5vw rgb(206 206 206 / 75%);
 					overflow-wrap: break-word;
 					width: 70%;
 					max-width: 70%;
@@ -224,7 +224,6 @@
 					transform: translate(-100%, 0);
 
 					img {
-
 						transform: scale(1) !important;
 						object-fit: cover !important;
 						width: 100%;
@@ -263,7 +262,6 @@
 									border: 0;
 								}
 							}
-
 						}
 
 						.image_container {
@@ -286,7 +284,6 @@
 
 								img {
 									position: absolute;
-
 								}
 
 								#phone1 {
@@ -307,7 +304,6 @@
 						}
 
 						.text_container {
-
 							//height: 100%;
 							display: flex;
 							flex-direction: column;
@@ -373,7 +369,6 @@
 					}
 				}
 			}
-
 		}
 	}
 
