--- a/src/components/Controlpanel/Controlpanel.scss
+++ b/src/components/Controlpanel/Controlpanel.scss
@@ -1,31 +1,77 @@
+* {
+	box-sizing: border-box;
+}
+
 .panel {
 	min-height: 100vh;
 	background-color: #160f30;
-	border: 1px solid red;
-	padding: 10px;
-		.ASNlogo {
-				border: 1px solid red;
-				max-width: 15vw;
-				img{
-					object-fit: contain;
-					width: 100%;
-				}
-				.sub{
-					display: flex;
-					align-items: center;
-					span{
-						width: 3vw;
-						height:2px;
-						background-color: #5FFFE2;
-						margin-right: 0.3vw;
-					}
-					p{
-						font-weight: lighter;
-					}
-				}
+	padding: 10px 30px;
+	.ASNlogo {
+		// border: 1px solid red;
+		max-width: 15vw;
+		img {
+			object-fit: contain;
+			width: 100%;
+		}
+		.sub {
+			display: flex;
+			align-items: center;
+			span {
+				width: 3vw;
+				height: 2px;
+				background-color: #5fffe2;
+				margin-right: 0.3vw;
 			}
+			p {
+				font-weight: lighter;
+			}
+		}
+	}
 	p {
 		color: #fff;
 	}
 
+	.section {
+		margin-top: 50px;
+		background-color: #0e0523;
+		border-radius: 20px;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+
+		.section-title {
+			// width: 100px;
+			background-color: #5afe9d;
+			color: #000;
+			border-radius: 20px;
+			padding: 10px 20px;
+			display: inline-block;
+			text-align: center;
+		}
+
+		.icons-wrapper {
+			width: 100%;
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			grid-gap: 20px;
+			padding: 20px;
+
+			div {
+				&.disabled {
+					opacity: 0.5;
+				}
+				&:hover {
+					cursor: pointer;
+				}
+				img {
+					width: 100%;
+				}
+
+				p {
+					text-align: center;
+					padding: 10px 0 0 0;
+				}
+			}
+		}
+	}
 }
