--- a/src/routes/page.scss
+++ b/src/routes/page.scss
@@ -20,6 +20,10 @@
 	margin: 0;
 }
 
+input {
+	border-color: #5aff9d;
+}
+
 .hidden {
 	display: none !important; // de uitzonderlijke keer dat ik toch een keer !important ga moeten gebruiken..
 }
@@ -86,7 +90,7 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				border: 1px solid red;
+				// border: 1px solid red;
 			}
 
 			.frame1 {
@@ -157,13 +161,13 @@
 					}
 
 					.big {
-						margin: 0 !important;
-						margin-top: 3.5vh;
+						// margin: 0 !important;
+						// margin-top: 3.5vh;
 						display: inline-block;
 						color: white;
-						font-size: 3vw;
-						height: 3.5vw;
-						width: 10.7vw;
+						font-size: 2vw;
+						// height: 3.5vw;
+						// width: 10.7vw;
 						max-width: 11.5vw;
 						// margin-left: 0.26vw;
 						// margin-right: 0.26vw;
@@ -187,7 +191,7 @@
 					pointer-events: auto;
 					display: flex;
 					text-align: center;
-					font-size: 4.1vw;
+					font-size: 2.6vw;
 					font-family: SamsungSharpSans;
 					// text-shadow: 0px 3px 50px rgba(255,255,255,0.9);
 					text-shadow: 0 0 1.5vw rgb(206 206 206 / 60%), 0 0 0.5vw rgb(206 206 206 / 75%);
